# autopilot-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_capitol.py  test_sec.py
autopilot_cli/: __init__.py  main.py  mcp_server.py  models.py
autopilot_cli/sources/: __init__.py  capitol_trades.py  sec_edgar.py
