[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "autopilot-cli"
version = "0.1.0"
description = "AI agent-powered CLI for Congressional trades and hedge fund 13F filings"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
autopilot = "autopilot_cli.main:app"
autopilot-mcp = "autopilot_cli.mcp_server:main"

[tool.setuptools.packages.find]
include = ["autopilot_cli*"]
